--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="header">
-  <h1>Event PLanner App</h1>
+  <h1><span class="head-literal">E</span>vent <span class="head-literal">P</span>Lanner <span class="head-literal">A</span>pp</h1>
 </div>
