--- a/src/app/data-time-form/data-time-form.component.css
+++ b/src/app/data-time-form/data-time-form.component.css
@@ -1,3 +1,11 @@
+.container-fluid {
+    /* background: url("backimage3.jpg"); */
+    /* background */
+    height: 1000px;
+    /* height: 100%; */
+    max-height: 100%;
+}
+
 h3 {
     font-weight: lighter;
    
@@ -6,38 +14,51 @@ h3 {
 .sidebar{
     border-right: 1px solid #000;
     height: 100%;
+    background: white;
+    border-bottom: 1px solid #000;
 }
 
 ul {
     padding: 0px;
     margin: 0px;
+    
 }
 
 li {
     list-style: none;
     padding: 10px;
-    margin: 10px;
+    margin: 20px;
     border: 3px solid black;
+    background-color: white;
+    /* display: inline; */
 
 }
 
 .Встреча:hover{
-    background-color: orange;
+    background-color: #00C7FF;
     transition: .5s;
+    border: 3px solid black;
+    cursor: pointer;
 } 
 
 .Праздник:hover{
     background-color: lawngreen;
     transition: .5s;
+    border: 3px solid black;
+    cursor: pointer;
+    
 } 
 
 .Свидание:hover{
     background-color: hotpink;
     transition: .5s;
+    border: 3px solid black;
+    cursor: pointer;
+    
 } 
 
 .Встреча{
-    border-color: orange;
+    border-color: #00C7FF;
 }
 
 .Праздник {
@@ -52,10 +73,11 @@ button{
     padding: 0 10px;
     float: right;
     border: none;
-    background: none;
+    background: white;
     cursor: pointer;
     border-bottom: 1px solid black;
     /* border-top: 1px solid black; */
+    z-index: 10;
 }
 
 button:active{
@@ -63,12 +85,60 @@ button:active{
     color: white;
     transition: 0.2s;
 }
+
+button:hover{
+    background-color: black;
+    color: white;
+    transition: 0.2s;
+    
+
+}
 #typeborder{
     color: black;
 }
 
 input{
-    border: 1px solid black;
+    border: 2px solid black;
     margin: 5px;
+}
+
+.changeView li{
+    display: inline-block;
+    max-width: 210px;
+    width: 100%;
+    /* height: 100px; */
+    /* margin: 0px;
+    padding:0px; */
+    word-wrap: break-word;
+	overflow-wrap: break-word;
+   
+}
+
+input:hover{
+    /* background-color: black; */
+    /* color: white; */
+    transition: .4s;
+    cursor: pointer;
+    border:2px solid lime;
+}
+
+select:hover{
+    /* background-color: black; */
+    /* color: white; */
+    transition: .4s;
+    cursor: pointer;
+    border-color: white;
+}
+
+option:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
+  }
+
+
+
+.datestyle{
+    font-weight: 600;
 }
 
